# chimera-factory

./: .gitignore  README.md  day1_technical_report.md  pyproject.toml  submission_report.md
.cursor/: rules.md
.cursor/roles/: agents.md
.cursor/rules/: agent.md  project_chimera.md  project_chimera.mdc  tdd_guard.md
research/: architecture_strategy.md  mcp_connection_log.md  research_summary.md  tooling_strategy.md
skills/: README.md
skills/content_generator/: README.md
skills/trend_fetcher/: README.md
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
tests/: test_trend_fetcher.py
