[project]
name = "chimera-factory"
version = "0.1.0"
description = "Spec-driven autonomous influencer factory – Project Chimera"
authors = [{name = "Abenezer Ayele"}]
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.5",
    "redis>=5.0",
    "weaviate-client>=4.0",
    "mcp>=1.2",               # Official MCP SDK
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-asyncio",
    "ruff",
]

[tool.uv]
# Optional: default to installing dev group
default-groups = ["dev"]
